# auth_service_backend

./: .env.example  .gitignore  Cargo.toml  README.md  performance_test.sh  test_rate_limit.sh
scripts/: generate_keys.sh
src/: lib.rs  main.rs
src/caching/: mod.rs  redis.rs
src/config/: auth_config.rs  data_config.rs  mod.rs
src/core/: mod.rs  registry.rs
src/db/: mod.rs
src/domain/: mod.rs
src/domain/dto/: mod.rs
src/domain/dto/tokens/: request.rs  response.rs
src/domain/dto/users/: mod.rs
src/domain/dto/users/request/: auth_request.rs  create_user.rs  create_user_request.rs  mod.rs
src/domain/dto/users/response/: google_oauth_response.rs  mod.rs  user_response.rs
src/domain/entities/: mod.rs
src/domain/entities/users/: mod.rs  user.rs
src/domain/models/: mod.rs
src/domain/models/auth/: authenticated_user.rs  authentication_request.rs  mod.rs
src/domain/models/oauth/: mod.rs
src/domain/models/oauth/google_oauth_model/: google_user.rs  mod.rs  (+1 more)
src/domain/models/token/: mod.rs  token.rs
src/errors/: errors.rs  mod.rs
src/handlers/: auth.rs  mod.rs  rsa.rs  token_handlers.rs  users.rs
src/middlewares/: auth_inner.rs  auth_middleware.rs  mod.rs
src/repositories/: mod.rs
src/repositories/tokens/: mod.rs  token_repository.rs
src/repositories/users/: mod.rs  user_repo.rs
src/routes/: mod.rs
src/services/: mod.rs
src/services/auth/: google_auth_service.rs  jwt_rsa_service.rs  mod.rs  rsa_service.rs  token_service.rs
src/services/users/: mod.rs  user_service.rs
src/utils/: display_terminal.rs  mod.rs  string_utils.rs
